traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:6: error: not found: value marque
      marque(n)
      ^TraversalByColumn:10: error: not found: value marque
      marque(n)
      ^TraversalByColumn:25: error: not found: value marque
marque(x:Int){
^TraversalByColumn:25: error: not found: value x
marque(x:Int){
       ^TraversalByColumn:26: error: not found: value x
  ecritMessage(x)
               ^