traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  var n = 0
  while(!positionFinale()){
    if(getY()==getMondeHauteur()){
      setPos(getX()+1,0)
      n=n+1
      marque(n)
    } else {
      recule()
      n=n+1
      marque(n)
    }
  }
}

def positionFinale():Boolean = {
  if(getMondeHauteur()==getY() && getMondeLargeur()==getX()){
    return true
  } else {
    return false
  }
}



marque(x:Int){
  ecritMessage(x)
}